# Managers

./: CMakeLists.txt  main.cpp
Debug/: makefile  sources.mk
Debug/Engine/: subdir.mk
Debug/Game/: subdir.mk
Debug/manager_utils/src/managers/: subdir.mk
Debug/sdl_utils/src/: subdir.mk
Debug/sdl_utils/src/containers/: subdir.mk
Debug/utils/src/Time/: subdir.mk
Debug/utils/src/drawings/: subdir.mk
Debug/utils/src/thread/: subdir.mk
Engine/: Engine.cpp  Engine.h  EngineConfigLoader.cpp
Engine/config/: EngineConfig.h
Game/: Game.cpp  Game.h
manager_utils/: CMakeLists.txt
manager_utils/include/manager_utils/config/: DrawMgrCfg.h  ManagerHandlerCfg.h  RsrcMgrCfg.h
manager_utils/include/manager_utils/drawing/: Image.h  Text.h  Widget.h
manager_utils/include/manager_utils/managers/: DrawMgr.h  ManagerHandler.h  MgrBase.h  RsrcMgr.h
manager_utils/src/: dummy.cpp
manager_utils/src/drawing/: Image.cpp  Text.cpp  Widget.cpp
manager_utils/src/managers/: DrawMgr.cpp  ManagerHandler.cpp  RsrcMgr.cpp
sdl_utils/include/sdl_utils/: Renderer.h
sdl_utils/include/sdl_utils/containers/: ImageContainer.h
sdl_utils/src/: Renderer.cpp
sdl_utils/src/containers/: ImageContainer.cpp
utils/: CMakeLists.txt
utils/include/utils/drawings/: DrawParams.h  Image.h
utils/src/drawings/: Color.cpp  DrawParams.cpp  Image.cpp
